Fixed minor bug with scrolling. Implemented independant scrollbar for each chat list.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -82,6 +82,8 @@ body, html {
   background-color: rgb(30, 30, 30);
   padding: 5px;
   margin: 2px;
+  height: auto;
+  width: fit-content;
   border-width: 2px;
   border-radius: 10px;
   border-color: blue;
